# tundra

./: .gitattributes  .gitignore  Cargo.toml  PROJECT_ARCHITECTURE.md  Phase1  Promts Edited  README.md  Stack and Arc  Stack and Arc.md  Tundra.md  index.html  notes-app-architecture-roadmap.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/tundra-core/: Cargo.toml
crates/tundra-core/src/: backup.rs  calendar.rs  document.rs  error.rs  import.rs  index.rs  kanban.rs  lib.rs  links.rs  spellcheck.rs  vault.rs  watcher.rs
crates/tundra-core/src/backup/: mod.rs  tests.rs
crates/tundra-core/src/calendar/: mod.rs  tests.rs
crates/tundra-core/src/document/: mod.rs  tests.rs
crates/tundra-core/src/index/: mod.rs  tests.rs
crates/tundra-core/src/kanban/: mod.rs  tests.rs
crates/tundra-core/src/links/: mod.rs  tests.rs
crates/tundra-core/src/spellcheck/: mod.rs  tests.rs
crates/tundra-core/src/vault/: attachments.rs  config.rs  dates.rs  folders.rs  indexing.rs  mod.rs  notes.rs  paths.rs  quicknotes.rs  tags.rs  templates.rs  tests.rs  watch.rs
crates/tundra-core/src/watcher/: mod.rs  tests.rs
docs/: README.md  attachments-linux-media.md  dev-setup.md  file-watcher.md  folder-groups.md  graph-and-views.md  ipc-and-bindings.md  kanban-and-tags.md  keybindings.md  note-sorting-and-folder-tables.md  templates.md  ui-fonts.md  vault-and-state.md
docs/planning/: Tundra_Phase1_Master.md  Tundra_Phase2_Master.md  Tundra_Phase3_Master.md
scripts/: check-layering.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/dictionaries/: README.md
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  backup.rs  calendar.rs  config.rs  folders.rs  import.rs  kanban.rs  links.rs  mod.rs  notes.rs  quicknotes.rs  search.rs  spellcheck.rs  tags.rs  templates.rs  tests.rs  vault.rs
src/app/: App.tsx  AppSidebar.tsx  EditorPane.tsx  ErrorToast.tsx  MainPane.tsx  NavHistoryButtons.tsx  Onboarding.tsx  Ribbon.tsx  SidebarActions.tsx  TemplateEditorPane.tsx  VaultSwitcher.tsx  ViewSwitcher.tsx
src/app/dialogs/: DeleteConfirmDialog.tsx  NewFolderDialog.tsx  NewGroupDialog.tsx
src/app/hooks/: useAppShortcuts.ts  (+8 more)
src/calendar/: CalendarView.tsx
src/components/: DateTimePicker.tsx  ViewFrame.tsx
src/editor/: BacklinksPanel.tsx  EditorHeader.tsx  EditorMenus.tsx  FileOpenButton.tsx  FindBar.tsx  NoteBanner.tsx  NoteEditor.tsx  NoteLink.tsx  NoteLinkPicker.tsx  TableOfContents.tsx  attachmentKind.test.ts  attachmentKind.ts  blockContent.test.ts  blockContent.ts  debouncedFlush.test.ts  debouncedFlush.ts  findPlugin.ts  linkMenu.test.ts  linkMenu.ts  noteMerge.test.ts  noteMerge.ts  noteStats.test.ts  noteStats.ts  persistence.ts  reconcile.test.ts  reconcile.ts  schema.ts  spellcheckPlugin.test.ts  spellcheckPlugin.ts  tocHeadings.test.ts  tocHeadings.ts  typedLinks.test.ts  typedLinks.ts  useEditorClipboard.ts  useEditorContextMenus.ts  useEditorShortcuts.ts  useEditorTemplates.ts  useNoteBlockEditor.ts  useNoteEditorPersistence.ts  useTypedLinks.ts  (+1 more)
src/foldertable/: AddColumnPopover.tsx  ColumnHeader.tsx  FolderTableView.tsx  PropertyCell.tsx  PropertyEditor.tsx  SortMenu.tsx  ordering.test.ts  ordering.ts  useFolderSchema.ts
src/graph/: GraphInfoPanel.tsx  GraphView.tsx  emojiNodes.ts  nodeLabel.ts
src/home/: Home.tsx  MiniGraphWidget.tsx  widgets.tsx
src/import/: ImportDialog.tsx  frontmatter.ts  obsidianAdapter.ts  pipeline.ts  types.ts
src/inspector/: NoteInspector.tsx
src/kanban/: KanbanView.tsx
src/keybindings/: binding.test.ts  binding.ts  registry.ts
src/lib/: errorMessage.ts
src/nav/: FolderSortMenu.tsx  IconPicker.tsx  NavContextMenu.tsx  NavTree.test.tsx  NavTree.tsx  NoteIcon.tsx  SidebarSections.tsx  dragDrop.test.ts  dragDrop.ts  flatten.test.ts  flatten.ts  folderSort.ts  twemoji.ts  twemojiImg.tsx
src/quicknotes/: QuickNoteView.tsx  quickNoteSchema.ts
src/search/: SearchPalette.tsx
src/services/: bindings.ts  index.ts
src/settings/: SettingsDialog.tsx
src/store/: activity.ts  folderGroups.ts  folderViews.ts  keybindings.ts  knownVaults.ts  linkTitles.ts  tagColors.ts  templates.ts  theme.ts  viewState.ts
src/styles/: inter-variable.css  open-dyslexic.css  twemoji.css
src/tags/: TagsView.tsx
src/templates/: SaveAsTemplateDialog.tsx  TemplatePicker.tsx  TemplatesView.tsx  applyTemplate.test.ts  applyTemplate.ts
(+3 files in other folders)
