# Workspace root — "One Rust core, thin front doors" (CLAUDE.md §2).
# `tundra-core` holds all platform-agnostic data logic; `src-tauri` is the thin
# desktop front door. A future sync server / mobile app reuses `tundra-core`.
[workspace]
resolver = "2"
members = ["crates/tundra-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# Shared dependency versions so the core and the Tauri shell never drift.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "2"
