[package]
name = "tundra-core"
description = "Platform-agnostic core: vault storage, note/block model, domain logic."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tundra_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tempfile.workspace = true
notify.workspace = true
walkdir = "2.5.0"
# Content-addressed attachment store (Phase 2 step 1): attachments are named by
# the blake3 hash of their bytes, so identical content dedupes automatically.
blake3 = "1"
# specta derives the TS-facing types. `chrono` lets it represent DateTime.
# Block props/content are arbitrary JSON exported as TS `any` (see document.rs),
# so we avoid expanding serde_json::Value (which specta forbids for i64/u64).
# Pinned to match tauri-specta in src-tauri.
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono"] }
specta-typescript = "0.0.12"
tantivy.workspace = true
# One-click vault backup (Phase 3 step 3): a single .zip of the whole vault
# (excluding the rebuildable .vault/cache/), written outside the vault.
zip = "2"
# Multilingual spellcheck (Phase 3 step 4): pure-Rust, Hunspell-compatible.
# `unstable-suggestions` enables `WordEntry::suggest` (replacement suggestions).
zspell = { version = "0.5", features = ["unstable-suggestions"] }
